[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "generate-random-ascii"
version = "0.1.0"
[tool.poetry.dependencies]
StringGenerator = "^0.3.3"
python = "^3.7"
[tool.poetry.dev-dependencies]
